--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,9 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/primeng/resources/themes/aura-light-purple/theme.css"
+
             ],
             "scripts": [],
             "server": "src/main.server.ts",
@@ -97,5 +99,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "2860b592-4018-4b6f-8d17-b076959a14da"
   }
 }
