added test files

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:pay": "node dist/pay/server/server.mjs"
+    "test": "jest",
+    "test:watch":"jest --watch",
+    "test:coverage":"jest --coverage"
   },
   "private": true,
   "dependencies": {
@@ -21,7 +22,10 @@
     "@angular/platform-server": "^18.1.0",
     "@angular/router": "^18.1.0",
     "@angular/ssr": "^18.1.0",
+    "@types/jest": "^29.5.12",
     "express": "^4.18.2",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^14.1.1",
     "primeng": "^17.18.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -32,14 +36,23 @@
     "@angular/cli": "^18.1.0",
     "@angular/compiler-cli": "^18.1.0",
     "@types/express": "^4.17.17",
-    "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
-    "jasmine-core": "~5.1.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.5.2"
+  },
+  "jest": {
+    "preset" : "jest-preset-angular",
+    "setupFilesAfterEnv" : [
+      "<rootDir>/src/setup.jest.ts"
+    ],
+    "testPathIgnorePatterns":[
+      "<rootDir>/node_modules/",
+      "<rootDir>/dist/"
+    ],
+    "globals": {
+      "ts-jest":{
+        "tsConfig":"<rootDir>/tsconfig.spec.json",
+        "stringifyContentPathRegex":"\\.html$"
+      }
+    }
   }
 }
