--- a/angular.json
+++ b/angular.json
@@ -28,8 +28,7 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/primeng/resources/themes/aura-light-purple/theme.css"
-
+              "node_modules/primeng/resources/themes/aura-light-purple/theme.css",
             ],
             "scripts": [],
             "server": "src/main.server.ts",
@@ -76,26 +75,6 @@
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n"
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
-            "tsConfig": "tsconfig.spec.json",
-            "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
-            ],
-            "styles": [
-              "src/styles.css"
-            ],
-            "scripts": []
-          }
         }
       }
     }
